<resources>
    <string name="app_name">MyntraApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="studio">Studio</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="login_signup">login/signUp</string>
    <string name="help_center">Help Center</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="scan_for_coupon">Scan for coupon</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">ABOUT US</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="app_version_4_2010_1">APP VERSION 4.2010.1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sample_navigation_bar">sampleNavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wishlistCaps">WISHLIST</string>
    <string name="add_to_bag">ADD TO BAG</string>
    <string name="disDetails">Display: Analogue Movement: Quartz Power source: Battery Dial style: Solid round stainless steel dial Features: Reset Time, Reset Time, Glow in the Dark Inlays Strap style: Brown regular, leather strap with a tang closure Water resistance: 50 m Warranty: 2 years Warranty provided by brand/manufacturer Manufactured by: Daniel Klein group Country of Origin: Hong Kong</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="total_amount">Total Amount</string>
</resources>