<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NavFragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="Profile"
            android:textSize="@dimen/sp25" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/brown"
                    android:paddingTop="@dimen/dp30">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/profile_user_mage" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp20"
                        android:background="@color/themeColor"
                        android:text="@string/login_signup"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:elevation="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/orders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:drawableLeft="@drawable/ic_order_box"
                        android:drawablePadding="@dimen/dp20"
                        android:padding="@dimen/dp10"
                        android:text="@string/orders"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp17"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:drawableLeft="@drawable/ic_help_center"
                        android:drawablePadding="@dimen/dp20"
                        android:padding="@dimen/dp10"
                        android:text="@string/help_center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp17"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:drawableLeft="@drawable/ic_wishlist"
                        android:drawablePadding="@dimen/dp20"
                        android:padding="@dimen/dp10"
                        android:text="@string/wishlist"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp17"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:elevation="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/scanForCoupon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:drawableLeft="@drawable/ic_scan_for_coupan"
                        android:drawablePadding="@dimen/dp20"
                        android:padding="@dimen/dp10"
                        android:text="@string/scan_for_coupon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp17"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:drawableStart="@drawable/ic_refer_earn"
                        android:drawablePadding="@dimen/dp20"
                        android:padding="@dimen/dp10"
                        android:text="@string/refer_and_earn"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp17"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:elevation="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:padding="@dimen/dp10"
                        android:text="@string/faqs"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp12" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:padding="@dimen/dp10"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp12" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:padding="@dimen/dp10"
                        android:text="@string/terms_of_use"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp12" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:padding="@dimen/dp10"
                        android:text="PRIVACY POLICY"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp12" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp30"
                android:textColor="@color/themeColor"
                android:text="Log out"
                android:background="@drawable/log_out_rectengle_box"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:layout_constraintTop_toBottomOf="@id/card4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:text="@string/app_version_4_2010_1"
                android:textSize="@dimen/sp15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>