<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchItemFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/kartCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/ic_baseline_arrow_back_24" />

            <View
                android:id="@+id/shopBag1"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/ic_shopping_bag" />

            <View
                android:id="@+id/share1"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp10"
                android:layout_toStartOf="@id/shopBag1"
                android:background="@drawable/ic_baseline_share_24" />

            <View
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp10"
                android:layout_toStartOf="@id/share1"
                android:background="@drawable/ic_wishlist" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kartCard1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImageBuy"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/brandNameBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productImageBuy"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:text="bdsads"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceToBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brandNameBuy"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:text="bdsads"
                android:textSize="@dimen/sp15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionToBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceToBuy"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:text="@string/disDetails"
                android:textSize="@dimen/sp15" />
            <HorizontalScrollView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginTop="@dimen/dp30"
                android:layout_below="@id/descriptionToBuy">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                    android:layout_margin="@dimen/dp10"
                    android:id="@+id/btnXs"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="XS"
                    android:textStyle="bold"
                    android:background="@drawable/round_for_size"/>
                <Button
                    android:id="@+id/btnS"
                    android:layout_margin="@dimen/dp10"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="S"
                    android:textStyle="bold"
                    android:background="@drawable/round_for_size"/>
                <Button
                    android:layout_margin="@dimen/dp10"
                    android:id="@+id/btnM"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="M"
                    android:textStyle="bold"
                    android:background="@drawable/round_for_size"/>
                <Button
                    android:layout_margin="@dimen/dp10"
                    android:id="@+id/btnL"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="L"
                    android:textStyle="bold"
                    android:background="@drawable/round_for_size"/>
                <Button
                    android:layout_margin="@dimen/dp10"
                    android:id="@+id/btnXL"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:text="XL"
                    android:textStyle="bold"
                    android:background="@drawable/round_for_size"/>
                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/rating_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size"
                android:src="@drawable/rating_star" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_star"
                android:layout_marginBottom="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/return_details" />
        </RelativeLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddToBag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btnWishList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_wishlist"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/wishlistCaps" />

            <Button
                android:id="@+id/btnAddToBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/themeColor"
                android:drawableLeft="@drawable/ic_baseline_shopping_bag_241"
                android:paddingLeft="@dimen/dp20"
                android:text="@string/add_to_bag"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>